Bug 88443 - resize image (picture) together with frame does not work
Summary: resize image (picture) together with frame does not work
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.5.2 release
Hardware: All All
: highest major
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.1.3
Keywords: possibleRegression
Depends on:
Blocks:
 
Reported: 2015-01-15 06:53 UTC by Edmund Laugasson
Modified: 2018-07-13 11:57 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
Example Writer document where changing frame size, the picture size leaves intact (80.68 KB, application/vnd.oasis.opendocument.text)
2015-01-15 06:53 UTC, Edmund Laugasson
Details
strace in 64-bit Linux Mint Cinnamon 17.1 (53.81 KB, text/plain)
2015-05-22 18:09 UTC, Edmund Laugasson
Details
Writer document containing image with caption (67.31 KB, application/vnd.oasis.opendocument.text)
2015-05-22 18:19 UTC, Edmund Laugasson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Edmund Laugasson 2015-01-15 06:53:27 UTC
Created attachment 112269 [details]
Example Writer document where changing frame size, the picture size leaves intact

Steps to reproduce:
1. insert some picture into Writer
2. add caption - this will add also frame around the picture
3. try to resize frame - this will happen separately from picture

Expected result - changing frame size will change also picture size inside frame.

Actually this was long time so but some versions back, I guess starting 4.x.x or something branch this is broken.

Earlier time there was also need to hold SHIFT when resizing to keep same relationship of width and height. Now it seems holding SHIFT is not needed but it is OK.

Luckily this still works, that moving frame will move also picture inside it.

I tried this in Windows and GNU/Linux. I personally use 64-bit Ubuntu 14.04.1 LTS currently in my production machines. I made also one course with LibreOffice under Windows where the same bug appeared.

Added file was done using 64-bit Ubuntu 14.04.1 LTS (using kernel 3.18.2, Gnome3 PPA, Ubuntu X-SWAT PPA, when Intel GPU then also using Intel Linux Graphics software, LibreOffice PPA) and LibreOffce 4.3.5.2 Build ID: 430m0(Build:2). These PPA-s and kernel version do not affect, I assume but just mention to be precise.
Comment 1 Robinson Tryon (qubit) 2015-01-15 08:03:27 UTC
Comment on attachment 112269 [details]
Example Writer document where changing frame size, the picture size leaves intact

fix mimetype
Comment 2 Robinson Tryon (qubit) 2015-01-15 08:11:00 UTC
TESTING with LO 4.4.0.2 + Ubuntu 14.04

(In reply to Edmund Laugasson from comment #0)
> Steps to reproduce:
> 1. insert some picture into Writer
> 2. add caption - this will add also frame around the picture

I just grabbed attachment 112269 [details] for testing.

> 3. try to resize frame - 

RESULT: this will happen separately from picture

CONFIRMED: Resizing the frame appears to happen independently from resizing the image contained "within" it  (not exactly within the frame if it doesn't resize, right?)

Status -> NEW

> Actually this was long time so but some versions back, I guess starting
> 4.x.x or something branch this is broken.

So this is a regression?

Whiteboard -> possibleRegression

If it's not a regression, then it could just be an enhancement. It's a pretty useful improvement, but if we've never had it working, then it might need to be re-prioritized a bit.

> [...] These PPA-s and kernel version do not affect, I assume but
> just mention to be precise.

In this case, I confirmed the problem, so that information wasn't critical, but it's helpful for you to provide it just in case repro isn't so easy to get. That will then let us focus-in on the particular OS, software, architecture, etc.. that we need to use to duplicate your efforts.
Comment 3 Edmund Laugasson 2015-05-22 17:39:51 UTC
Using 64-bit Linux Mint Cinnamon 17.1 with 4.0.4-040004-generic kernel
Version: 5.0.0.0.beta1
Build ID: 0a16c3dda4150008d9be6f24cbd15ac198d116d3
Locale: et-EE (et_EE.UTF-8)

Bug still exist.
Comment 4 Edmund Laugasson 2015-05-22 18:09:48 UTC
Created attachment 115844 [details]
strace in 64-bit Linux Mint Cinnamon 17.1

Using 64-bit Linux Mint Cinnamon 17.1 with 4.0.4-040004-generic kernel
LibreOffice version: 5.0.0.0.beta1
Build ID: 0a16c3dda4150008d9be6f24cbd15ac198d116d3
Locale: et-EE (et_EE.UTF-8)

1. Created document and inserted image and caption
2. Document closed and opened strace ./soffice 2> /path/bug88443_strace.txt
3. Tried to change frame size - image size remained intact. Also tried to change image and frame size remained intact.

Expected result: changing frame size, the image should resize automatically together with frame. It would be nice if also vice versa it could be possible - changing image size, the frame size will change accordingly.
Comment 5 Edmund Laugasson 2015-05-22 18:19:22 UTC
Created attachment 115846 [details]
Writer document containing image with caption

... on page 3 is described and also one image inserted...
Comment 6 riesslibo 2015-05-24 05:12:19 UTC
Can confirm this also for Win7/64bit still in 5.0.0.0 beta 1 .

The problem with this behaviour is, that if you add a caption (via context menu "caption") to an activated picture there is added a frame around the picture automatically to hold picture and caption. The frame is not set by the user. After inserting the caption not the picture itself is activated but the frame.

If the size of the picture is not conviniend for the user, he trys to resize the piucture on the green sizing points, but they are from the frame, not from the picture, and so they are not able to resize the picture because of they are not aware, that there is another object "the frame around the picture".

An often discussed irritating behaviour in writer courses on my experience.
Comment 7 Edmund Laugasson 2015-05-24 05:53:34 UTC
Usually the thumb rule is that if there is caption on the picture and frame around the picture - all future activities must be applied to the frame. Then picture will follow the frame. Usually after captioning the picture is anchored to the frame and doing anything with frame will change picture as well. But in current bug report it seems that the picture and frame relationship is broken and changing frame does not change the picture.

This would be certainly great reversed feature when changing picture will change the frame as well. I would even propose to implement such feature as well. Usual error with captioned picture is activating only picture and accidentally relocating only picture. Such accidental picture changing inside frame will breake the connection between frame and picture.

Hereby I would propose to implement also reversal feature - when changing picture - it will change the frame. This will avoid breaking the picture and frame connectivity.

So then it would be not important anymore to activate frame around the picture if the picture is captioned. This makes much more comfortable especially for beginner users. I have 15 years of teaching experience with Writer (in the beginning was OpenOffice.org and now LibreOffice) and breaking the picture and frame connectivity by activating only picture is one of the most common mistakes users do.
Comment 8 Edmund Laugasson 2015-05-24 06:12:04 UTC
Certainly such relationship between picture and frame applies to all activities which are related with changing the size, relocating the picture with frame (position), anchoring, sending back or bringing to front etc.

At the same time there is possible to change picture inner attributes like brightness, saturation, color balance etc.
Comment 9 Oliver Specht (CIB) 2015-11-30 15:01:36 UTC
With the fix of https://bz.apache.org/ooo/show_bug.cgi?id=51453 relative width=100% has been removed when inserting captions to fix problems related to formulas. This should be changed to keep relative size for pictures.
Comment 10 Commit Notification 2015-12-01 11:58:16 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=568029bf360e70080d71c5b73fd01464a2d3adc6

tdf#88443: set relative width to objects with captions except formulas

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2015-12-01 15:21:37 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9ae2d9ff4be259ad60bbb10a7488e38ca4eefc11

tdf#88443:percent value fixed

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Robinson Tryon (qubit) 2015-12-09 16:59:34 UTC Comment hidden (obsolete)
Comment 13 raal 2016-02-20 12:08:28 UTC
Verified.
 Version: 5.2.0.0.alpha0+
Build ID: 91a7580e03d5b47c6e2513afce85ddee45e730b6
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-02-04_00:17:43
Comment 14 Commit Notification 2016-04-19 16:01:07 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=42ddef789587c5b5bbe7314b53d82642865652ae&h=libreoffice-5-1

tdf#88443: set relative width to objects with captions except formulas

It will be available in 5.1.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2016-04-19 23:17:16 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3b997090fb95957164d92d845bdb7cd7d15c5acf&h=libreoffice-5-1

tdf#88443:percent value fixed

It will be available in 5.1.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 riesslibo 2016-04-22 12:17:29 UTC
Yeah, test it in V5.2.0.0 alphax32 on Win7x64, resizing the frame resizes the picture, that's great, I think it works for me ;-))
Comment 17 saparvia 2018-06-27 10:26:15 UTC
I'm still experiencing this issue with Libreoffice 6 on Linux.

Version: 6.0.4.2
Build ID: 9b0d9b32d5dcda91d2f1a96dc04c645c450872bf
CPU threads: 48; OS: Linux 4.13; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 18 Buovjaga 2018-06-27 10:31:11 UTC
(In reply to saparvia from comment #17)
> I'm still experiencing this issue with Libreoffice 6 on Linux.
> 
> Version: 6.0.4.2
> Build ID: 9b0d9b32d5dcda91d2f1a96dc04c645c450872bf
> CPU threads: 48; OS: Linux 4.13; UI render: default; VCL: gtk2; 
> Locale: en-US (en_US.UTF-8); Calc: group

Then please open a new report.